# vivarium

./: .gitignore  README.md  TODO.md  data.code-workspace  enlightenment.json  pyproject.toml
chat-ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
chat-ui/src/: App.css  App.tsx  index.css  main.tsx
chat-ui/src/api/: index.ts
chat-ui/src/api/core/: OpenAPI.ts
chat-ui/src/api/models/: Body_add_message_api_conversations__conv_id__messages_post.ts  Body_add_message_conversations__conv_id__messages_post.ts  Conversation.ts  ConversationCreate.ts  ConversationMetadata.ts  ConversationUpdate.ts  Message.ts  MessageCreate.ts  MessageImage.ts  MetadataCreate.ts  MetadataUpdate.ts  SystemPrompt.ts  SystemPromptCreate.ts  SystemPromptUpdate.ts  TokenUsage.ts
chat-ui/src/api/services/: ConversationsService.ts  SystemPromptsService.ts
chat-ui/src/app/: page.tsx
chat-ui/src/components/: conversation-history.tsx  conversation.tsx  message-content.tsx  message-input.tsx  message.tsx  system-prompts.tsx  test-components.tsx  theme-toggle.tsx
chat-ui/src/components/ui/: card.tsx  checkbox.tsx  (+3 more)
chat-ui/src/hooks/: use-remark.tsx  use-toast.ts
chat-ui/src/lib/: conversation-sort.ts
scripts/: combui.sh  compact.py  strip_seps.py
src/claude/: config.py  main.py  storage.py
src/claude/conversations/: router.py  schema.py  storage.py
src/claude/system_prompts/: schema.py  storage.py
src/vivarium/: config.py  main.py  storage.py
src/vivarium/conversations/: router.py  schema.py
src/vivarium/system_prompts/: router.py
